Add optional custom field attributes
